# jax-vision-models

./: LICENSE  README.md  develop.ipynb  pyproject.toml
configs/lenet/: lenet.py
jvm/: __init__.py  transforms.py
jvm/builder/: __init__.py  builder.py  dataloader_builder.py
jvm/datasets/: tiny_imagenet.py
jvm/models/: __init__.py  lenet.py
jvm/utils/: __init__.py  utils.py
tools/: train.py
